Move UTF-8 Temp Folder
With this commit, all assets folder are removed from `extras_src/`, and
now it's totally clutter free.

- Move `extras_src/utf8/` to `asset/utf8/`.
- Update `init-env.sh` so that `$utfBasePath` points to the new location
  of the temporary UTF-8 folder.
- In `StdLibMan.asciidoc`, amend attribute defining location of UTF-8
  version of StdLib sources.
- Delete `extras_src/.gitignore`.
- Update `.gitignore` rules to handle temp files in `extras_src/utf8/`,
  as well as the previous rules that were in `extras_src/.gitignore`.
- Update READMEs accordingly to above changes.

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -33,7 +33,7 @@
 :AlanWWW: link:https://www.alanif.se/[www.alanif.se^,title="Visit Alan website"]
 
 // Directories Paths:
-:StdLibInc: ../utf8/StdLib
+:StdLibInc: {utf8dir}/../StdLib
 :StdLibDir: ../../StdLib
 :ExtrasDir: ../../extras
 
