StdLib Man: StdLib Excerpts
Carry on externalizing as many StdLib code excerpts as possible, to
ensure that the Manual mirrors the current library codebase.

- StdLib Man:
  - Use darker theme for StdLib code excerpts (See #86).
  - Define custom attributes for linking to StdLib source files.
  - Externalize StdLib code excerpts inclusion in:
    - Ch. 6. "Default Library Attributes".
      - Also add the library-defined attributes of the `WINDOW`, `SOUND`
        and `LIQUID` classes.
- StdLib sources:
  - Polish source and add ADoc tag comments for selective inclusion:
    - `lib_definitions.i`
      - `tag::default-attributes-thing[]`
    - `lib_classes.i`:
      - `tag::default-attributes-actor[]`
      - `tag::default-attributes-clothing[]`
      - `tag::default-attributes-door[]`
      - `tag::default-attributes-lightsource[]`
      - `tag::default-attributes-liquid[]`
      - `tag::default-attributes-weapon[]`
      - `tag::default-attributes-window[]`
      - `tag::default-attributes-sound[]`

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -2,7 +2,7 @@
 :doctitle: Alan Standard Library v{StdLibVer} User's Manual
 :author: Anssi Räisänen
 :revnumber: {StdLibVer}-WIP
-:revdate: 2020-10-02
+:revdate: 2020-10-04
 :lang: en
 :doctype: book
 // TOC Settings:
@@ -37,8 +37,20 @@
 :StdLibDir: ../../StdLib
 :ExtrasDir: ../../extras
 
-// examples files:
+// Links to examples files:
 :wedding_alan: pass:q[link:wedding.alan[`wedding.alan`^,title="View example source file"]]
+
+// Links to StdLib sources:
+:library: pass:q,a[link:{StdLibDir}/library.i[`library.i`^,title="View library source file"]]
+:lib_classes: pass:q,a[link:{StdLibDir}/lib_classes.i[`lib_classes.i`^,title="View library source file"]]
+:lib_definitions: pass:q,a[link:{StdLibDir}/lib_definitions.i[`lib_definitions.i`^,title="View library source file"]]
+:lib_locations: pass:q,a[link:{StdLibDir}/lib_locations.i[`lib_locations.i`^,title="View library source file"]]
+:lib_messages_library: pass:q,a[link:{StdLibDir}/lib_messages_library.i[`lib_messages_library.i`^,title="View library source file"]]
+:lib_messages_runtime: pass:q,a[link:{StdLibDir}/lib_messages_runtime.i[`lib_messages_runtime.i`^,title="View library source file"]]
+:lib_verbs: pass:q,a[link:{StdLibDir}/lib_verbs.i[`lib_verbs.i`^,title="View library source file"]]
+:lib_verbs_restrictions: pass:q,a[link:{StdLibDir}/lib_verbs_restrictions.i[`lib_verbs_restrictions.i`^,title="View library source file"]]
+
+
 
 // *****************************************************************************
 // *                                                                           *
