--- a/StdLib/CHANGELOG.asciidoc
+++ b/StdLib/CHANGELOG.asciidoc
@@ -29,6 +29,7 @@ TIP: For each new library release, we provide a list of all the bugs that were f
 :Issue_57: link:https://github.com/AnssiR66/AlanStdLib/issues/57[Issue&nbsp;#57^, title="See original Issue on GitHub"]
 :Issue_60: link:https://github.com/AnssiR66/AlanStdLib/issues/60[Issue&nbsp;#60^, title="See original Issue on GitHub"]
 :Issue_61: link:https://github.com/AnssiR66/AlanStdLib/issues/61[Issue&nbsp;#61^, title="See original Issue on GitHub"]
+:Issue_96: link:https://github.com/AnssiR66/AlanStdLib/issues/96[Issue&nbsp;#96^, title="See original Issue on GitHub"]
 // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 
 
@@ -148,6 +149,9 @@ https://github.com/AnssiR66/AlanStdLib/issues/18
 ** Moving around worn clothing items could crash the interpreter due to a stack error (see {Issue_57}).
 ** Various verbs dislocating worn items from its wearer were not updating the item's status to `NOT worn`, leading to erratic behavior in verbs with special worn-status checks when handling clothes (see {Issue_60}).
 ** Clothes nested inside worn clothing items (e.g. a pair of gloves inside the coat pockets) were also marked as being worn during game initialization (see {Issue_61}).
+
+* *[red]#Dark Locations#* --
+Fixed some small bugs and inconsistencies with the mechanics that handle the `lit` attributes of normal locations and instances of `DARK_LOCATION` (see {Issue_96}).
 
 
 == v2.1 -- 2018-05-27
