StdLib Man: Locations
Begin updating the Manual to mirror the latest changes from Issue #96:

- 8. Locations:
  - Add `DARK_ROOM` and `DARK_SITE` to the list of predefined location
    classes.
- §8.1. Indoor and Outdoor:
  - TIP on how to create `ROOM`- and `SITE`-like instances from custom
    location classes by locating them at `indoor` and `outdoor`, with a
    practical example externalized to:
    - `extras_src/manual/_custom-room-site-instances.alan`
- §8.1.1. ROOM:
  - Amend TIP about room-objects custom descriptions, specifying that
    they work not only on `ROOM` instances, but on any location that
    is `AT indoor`.
- 8.1.2. SITE:
  - Replace "x floor, x walls or x ceiling" with "x ground or x sky".

Also, begin to add titles to code examples that were externalized, and
a link to the example file (when not an internal-use only file).

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -38,6 +38,8 @@
 :ExtrasDir: ../../extras
 
 // Links to examples files:
+:livingroom_alan: pass:q[link:livingroom.alan[`livingroom.alan`^,title="View example source file"]]
+:meadow_alan: pass:q[link:meadow.alan[`meadow.alan`^,title="View example source file"]]
 :wedding_alan: pass:q[link:wedding.alan[`wedding.alan`^,title="View example source file"]]
 
 // Links to StdLib sources:
